<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="preferences_showNotifications"
        android:title="@string/preferences_showNotifications"
        android:summary="@string/preferences_showNotifications_summary"
        android:defaultValue="true" />
    <CheckBoxPreference
        android:key="preferences_showTunnelInfo"
        android:title="@string/preferences_showTunnelInfo"
        android:summary="@string/preferences_showTunnelInfo_summary"
        android:defaultValue="true" />
    <hu.blint.ssldroid.ui.TimeoutPreference
        android:key="preferences_connectionTimeout"
        android:title="@string/preferences_connectionTimeout"
        android:summary="%s"
        android:defaultValue="5000"/>
</PreferenceScreen>
