<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
>
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="10dip"
        android:paddingStart="10dip"
    >
        <TableRow>
			<TextView
                android:text="@string/tunnel_name"
                android:gravity="end|center_vertical"
				android:textAppearance="?android:attr/textAppearanceMedium" />

			<EditText
                android:id="@+id/tunnel_name"
                android:inputType="text"
                android:hint="@string/tunnel_name_hint"
				android:layout_width="fill_parent"
                android:layout_height="wrap_content"
				android:singleLine="true"
                android:layout_weight="1"/>
		</TableRow>
		<TableRow>
			<TextView android:text="@string/tunnel_localPort"
                android:paddingStart="0dip"
				android:paddingEnd="10dip"
                android:gravity="end|center_vertical"
				android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/tunnel_localPort"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/tunnel_localPort_hint"
                android:inputType="number" />
        </TableRow>
		<TableRow>
            <TextView
                android:text="@string/tunnel_remoteHost"
                android:gravity="end|center_vertical"
                android:paddingStart="0dip"
                android:paddingEnd="10dip"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/tunnel_remoteHost"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/tunnel_remoteHost_hint"
                android:inputType="textEmailAddress" />
        </TableRow>
		<TableRow>
			<TextView
                android:text="@string/tunnel_remotePort"
                android:paddingStart="0dip"
				android:paddingEnd="10dip"
                android:gravity="end|center_vertical"
				android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/tunnel_remotePort"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/tunnel_remotePort_hint"
                android:inputType="number" />
        </TableRow>
		<TableRow>
            <TextView
                android:text="@string/tunnel_certFile"
                android:gravity="end|center_vertical"
                android:paddingStart="0dip"
                android:paddingEnd="10dip"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/tunnel_certFile"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/tunnel_certFile_hint"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/tunnel_pickFile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tunnel_pickFile" />
        </TableRow>
		<TableRow>
			<TextView
                android:text="@string/tunnel_certPass"
                android:paddingStart="0dip"
				android:paddingEnd="10dip"
                android:gravity="end|center_vertical"
				android:textAppearance="?android:attr/textAppearanceMedium"/>

            <EditText
                android:id="@+id/tunnel_certPass"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/tunnel_certPass_hint"
                android:inputType="textPassword" />
        </TableRow>
        <TableRow android:gravity="center">
            <Button
                android:id="@+id/tunnel_test"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/tunnel_test"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>
        <TableRow android:gravity="center">
            <Button
                android:id="@+id/tunnel_apply"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/tunnel_apply"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>
	</TableLayout>
</ScrollView>
